--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -11,12 +11,11 @@
 - title: Education
   type: time_table
   contents:
-    - title: MS in Robotics
+    - title: PhD in Robotics
       institution: Carnegie Mellon University, Pittsburgh, PA
-      year: 2023
+      year: Hopefully 2028?
       description:
-        - 'GPA: 4.17/4'
-        - title: courses already taken
+        - title: Courses
           contents:
           - Math Fundamentals for Robotics
           - Computer Vision
@@ -24,11 +23,14 @@
           - Optimal Control and Reinforcement Learning
           - Planning and Decision Making in Robotics
           - Learning for Manipulation
-
-        - title: courses yet to be taken
-          contents:
           - Graduate Artificial Intelligence
           - Causality and Machine Learning
+          - Advanced Machine Learning and Game Theory
+
+    - title: MS in Robotics
+      institution: Carnegie Mellon University, Pittsburgh, PA
+      year: 2023
+      
     - title: BE in Electronics and Telecommunication
       institution: VES Institute of Technology
       year: 2019
