--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -5,3 +5,4 @@ github_repos:
   -  iamlab-cmu/delta_array
   -  ZoomLabCMU/DeltaZ
   -  ZoomLabCMU/Soft-Delta-Robots 
+  -  iamlab-cmu/dexterous-manipulation-delta-arrays
